fix align my beers

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,7 +2,7 @@
 html { height: 100%; }
 body { font-family: "Lucida Grande", sans-serif; font-size: 13px; background: #D01F3C url("/assets/bg.png") }
 .clear { clear: both; }
-#nav_top { background: #000; color: #FFF; }
+#nav_top { background: #000; color: #FFF; border-bottom: 1px solid #ccc; }
 #nav_top_in { width: 900px; padding: 20px; margin: 0 auto; }
 #nav_top_search { float: left; }
 #nav_top_search .lupa { position: relative; right: 25px; top: 3px; }
@@ -11,8 +11,10 @@ body { font-family: "Lucida Grande", sans-serif; font-size: 13px; background: #D
 #content { width: 900px; padding: 20px; margin: 0 auto; }
 #facebook #facebook_pic { width: 75px; float: left; }
 #facebook #facebook_pic img { border: 2px solid #000; }
-#facebook #facebook_name { padding: 15px; height: auto; width: auto; float: left; font-size: 20px; font-weight: bold; color: #FFF; border-right: 1px solid #ccc; text-shadow: 1px 1px 4px #000;}
+#facebook #facebook_name { padding: 15px; height: auto; width: auto; float: left; font-size: 20px; font-weight: bold; color: #FFF; text-shadow: 1px 1px 4px #000;}
+#facebook #count_my_beers { padding: 15px 0px 15px 0px;float: right; font-size: 20px; font-weight: bold; color: #FFF; text-shadow: 1px 1px 4px #000;}
 #show_my_beers { background: url("/assets/estante.jpg"); min-height: 300px; height: auto; }
-#top_armario { background: url("/assets/top_estante.png"); height: 50px; width: 900px; margin-top: 50px; }
-#each_beer { float: left; margin: 0px 50px 40px 50px;}
+#top_armario { background: url("/assets/top_estante.png"); height: 50px; width: 900px; margin-top: 30px; }
+#each_beer { width: 130px; float: left; margin: 10px 47px 30px 47px; text-align: center; }
+#each_beer p { text-shadow: 1px 1px 3px #333; font-weight: bold; position: relative; top: 7px; }
 input[type='text'] { border: 1px solid #ccc; padding: 3px; width: 200px; -webkit-border-radius: 20px; }
